<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailLabel"
        android:id="@+id/EmailLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordLabel"
        android:id="@+id/PasswordLabel"
        android:layout_below="@+id/Email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:layout_alignTop="@+id/PasswordLabel"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:id="@+id/RememberMe"
        android:checked="false"
        android:layout_below="@+id/Password"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignStart="@+id/Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/LoginButton"
        android:layout_below="@+id/RememberMe"
        android:layout_alignLeft="@+id/RememberMe"
        android:layout_alignStart="@+id/RememberMe"
        android:layout_alignRight="@+id/Password"
        android:layout_alignEnd="@+id/Password"
        android:onClick="LoginButtonOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPassword"
        android:id="@+id/setPasswordButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="setPasswordButtonOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getPassword"
        android:id="@+id/getPasswordButton"
        android:layout_below="@+id/setPasswordButton"
        android:layout_centerHorizontal="true"
        android:onClick="getPasswordButtonOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAccount"
        android:id="@+id/addAccountButton"
        android:layout_below="@+id/getPasswordButton"
        android:layout_centerHorizontal="true"
        android:onClick="addAccountButtonOnClick" />

</RelativeLayout>
